fix: collection form alignment

--- a/frontend/src/components/CollectionForm/styles.scss
+++ b/frontend/src/components/CollectionForm/styles.scss
@@ -2,7 +2,7 @@
 @use '../../theme/variables.scss' as vars;
 
 .seedlot-collection-form {
-  padding: 0 2.5rem;
+  padding: 0 3.5rem;
 
   h2 {
     @include type.type-style('heading-03');
